Fixed compatibility issues with scrolling on mobile

--- a/src/header/header.css
+++ b/src/header/header.css
@@ -102,7 +102,7 @@ button:active {
     width: 100%;
     left: 100%;
     display: flex;
-    height: 100vh;
+    height: 100%;
     top: 0;
     transition: transform .2s linear .06s;
 }
