--- a/src/header/header_loggedin.css
+++ b/src/header/header_loggedin.css
@@ -98,7 +98,7 @@ button:active {
     width: 100%;
     left: 100%;
     display: flex;
-    height: 100vh;
+    height: 100%;
     top: 0;
     transition: transform .2s linear .06s;
 }
